# stdexec-examples

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md
examples/: example_1_continue_on.cpp  example_2_basic_coroutine.cpp  example_3_async_scope.cpp  example_4_capturing_lambdas.cpp  example_5_continuation_scheduler.cpp  example_6_lock.cpp  example_7_accidental_async.cpp  example_8_synchronization_cycle.cpp
exercise/: hardware_manager.cpp
